# mirror-v3

./: AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  ci.yml
crates/mirror-bin/: Cargo.toml
crates/mirror-bin/src/: main.rs
crates/mirror-bin/tests/: cli.rs
crates/mirror-config/: Cargo.toml
crates/mirror-config/src/: lib.rs
crates/mirror-config/tests/: loading.rs  schema.rs
crates/mirror-core/: Cargo.toml
crates/mirror-core/src/: lib.rs  mock.rs
crates/mirror-core/tests/: loop_invariants.rs
crates/mirror-envelope/: Cargo.toml
crates/mirror-envelope/src/: lib.rs  ndjson.rs  parquet.rs
crates/mirror-envelope/tests/: roundtrip.rs
crates/mirror-fs/: Cargo.toml
crates/mirror-fs/src/: lib.rs  naming.rs
crates/mirror-fs/tests/: sink.rs
crates/mirror-kafka/: Cargo.toml
crates/mirror-kafka/src/: lib.rs
crates/mirror-s3/: Cargo.toml
crates/mirror-s3/src/: lib.rs
crates/mirror-s3/tests/: sink.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
e2e/: Cargo.toml
e2e/src/: docker.rs  fault.rs  kafka_helpers.rs  lib.rs  mirror_runner.rs
e2e/tests/: adversarial_fs.rs  envelope_and_timestamp_mode.rs  kafka_native_to_redpanda.rs  kafka_to_filesystem.rs  kafka_to_versitygw.rs  parallel_mirrors_and_graceful_flush.rs  restart_correctness.rs  target_outage_toxiproxy.rs
examples/: kafka-to-kafka.yaml  parallel-mirrors-filesystem.yaml  s3-versitygw.yaml
schemas/: mirror-v3.config.schema.json
