[workspace]
resolver = "2"
members = [
    "crates/mirror-config",
    "crates/mirror-core",
    "crates/mirror-kafka",
    "crates/mirror-fs",
    "crates/mirror-s3",
    "crates/mirror-bin",
    "crates/xtask",
    "e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/YoleanAgents/mirror-v3"

[workspace.dependencies]
mirror-config = { path = "crates/mirror-config" }
mirror-core = { path = "crates/mirror-core" }
mirror-kafka = { path = "crates/mirror-kafka" }
mirror-fs = { path = "crates/mirror-fs" }
mirror-s3 = { path = "crates/mirror-s3" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1", features = ["preserve_order"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rdkafka = { version = "0.39", default-features = false, features = ["cmake-build", "tokio"] }
async-trait = "0.1"
testcontainers = "0.27"
portpicker = "0.1"
base64 = "0.22"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
object_store = { version = "0.12", default-features = false, features = ["aws"] }
futures = "0.3"
bytes = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release-debug]
inherits = "release"
strip = "none"
debug = true
